--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,7 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+@import "variables.scss";
+
+@import "./parts/general.scss";
+
+@import "./parts/homepage.scss";
