--- a/src/scss/parts/register.scss
+++ b/src/scss/parts/register.scss
@@ -1,5 +1,4 @@
 .register-hero {
-    background-color: rgba(165 121 162) !important;
-    opacity: 0.8;
+    background: rgba(165, 121, 162, 0.5);
     min-height: 70vh;
 }
