changed some styles on the homepage and listings

--- a/src/scss/parts/listings.scss
+++ b/src/scss/parts/listings.scss
@@ -25,6 +25,7 @@
 .imgContainer img {
     max-width: 300px;
     margin: 0 auto;
+    padding-bottom: 3%;
 }
 
 .muted-text {
@@ -60,4 +61,8 @@ h3 {
 
 #mediaInputs input {
     margin-bottom: 10px;
+}
+
+.createlisting {
+    background-color: rgba(160, 243, 194, 0.5);
 }
