trying to add edit-listing button

--- a/src/scss/parts/listings.scss
+++ b/src/scss/parts/listings.scss
@@ -66,3 +66,17 @@ h3 {
 .createlisting {
     background-color: rgba(160, 243, 194, 0.5);
 }
+
+#delete-btn {
+    background-color: darkred;
+    color: white;
+}
+
+#editBtn {
+    display: none;
+}
+
+#bidBtn {
+    background-color: green;
+    color: white;
+}
