minor changes to small screen-width

--- a/src/scss/parts/listings.scss
+++ b/src/scss/parts/listings.scss
@@ -145,3 +145,13 @@ h3 {
 .active {
     text-decoration: underline;
 }
+
+@media (max-width: 400px) {
+    #removeBtn {
+        margin-top: 10px;
+    }
+
+    p {
+        font-size: 1vmax;
+    }
+}
