--- a/src/scss/parts/listings.scss
+++ b/src/scss/parts/listings.scss
@@ -1,19 +1,32 @@
 .loader {
     margin: 0 auto;
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid darkblue;
+    position: relative;
+    background-color: purple;
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
+    background: conic-gradient(#E3A84F, #7EC5E9, #A579A2, #E3684F);
     animation: spin 2s linear infinite;
+    box-shadow: 0px 0px 150px -75px black;
+    border: 4px solid white;
+}
+
+.loader::before {
+    content: "";
+    background-color: white;
+    position: absolute;
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 4px solid white;
+
 }
 
 @keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
+    to {
         transform: rotate(360deg);
     }
 }
